 <android.gesture.GestureOverlayView

   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"

   android:id="@+id/gestures"

   android:layout_width="fill_parent"

   android:layout_height="fill_parent"

   android:gestureStrokeType="multiple"

   android:fadeOffset="800">
<LinearLayout
    
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"    
    tools:context=".Asteroides" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@style/TextoAsteroides"
        android:layout_weight="4"
        android:text="@string/app_name" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button1"
        style="@style/TextoAsteroides.botones"
        android:layout_weight="0.5"
        android:text="@string/boton_Jugar" />

    <Button
        android:id="@+id/button2"
        style="@style/TextoAsteroides.botones"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:onClick="lanzarPreferencias"
        android:text="@string/boton_Configuracion" />

    <Button
        android:id="@+id/button3"
        style="@style/TextoAsteroides.botones"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:onClick="lanzarAcercaDe"
        android:text="@string/boton_AcercaDe" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@style/TextoAsteroides.botones"
        android:id="@+id/button4"
        android:layout_weight="0.5"
        android:text="@string/boton_Puntuaciones" />

    <Button
        android:id="@+id/button5"
        style="@style/TextoAsteroides.botones"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:text="@string/boton_Salir" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

</LinearLayout>
</android.gesture.GestureOverlayView>